# simplecoin

./: .gitignore  CMakeLists.txt  Makefile  README.md  blockchain.c  blockchain.h  hash.c  hash.h  main.c  makefile  simplecoin.c  simplecoin.h
test/: CMakeLists.txt  test.h  test_block_strlen.c  test_block_tostr.c  test_gen_sha256.c  test_test.c
